append spark script 2nd